Update to utility variables

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "superfly-css-utilities-layout",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Layout utilities",
   "main": "src/main/css/index.css",
   "scripts": {
@@ -28,11 +28,12 @@
   "homepage": "https://github.com/superfly-css/superfly-css-utilities-layout#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
-    "superfly-css-task-build": "^0.3.0"
-  },
-  "dependencies": {
+    "superfly-css-task-build": "^0.3.2",
     "superfly-css-task-clean": "0.0.1",
     "superfly-css-task-test": "^0.3.0",
+    "superfly-css-task-deploy": "0.0.10"
+  },
+  "dependencies": {
     "superfly-css-variables-dimension": "0.1.3"
   }
 }
